--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "author": "ikhsandwidanu <ikhsan.dwi.danu@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "cypress": "^13.2.0",
     "cypress-mochawesome-reporter": "^3.6.0",
+    "eslint": "^8.51.0",
     "prettier": "3.0.3",
     "typescript": "^5.2.2"
   },
