add onboarding scenario for general user

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # CREDENTIAL
 REGISTERED_EMAIL=ebizuone@gmail.com
 REGISTERED_PASSWORD=P@ssw0rd123
+ONBOARDING_EMAIL=ebizuthree@gmail.com
+ONBOARDING_PASSWORD=P@ssw0rd123
 
 # API KEY
 XAPIKEY=A298535C-B6AE-4EE4-B9B2-A07C996E76A7
